# fastapi

./: .gitignore  alembic.ini  crud.py  items_views.py  main.py  pyproject.toml  requirements.txt
alembic/: env.py
alembic/versions/: 0806db89f6f7_updated_posts_table.py  16070f89241d_add_unit_price_column_to_association_.py  29227ce339a5_create_order_product_association_table.py  3e7e9eecb7ed_created_users_table.py  a5080208d397_add_count_column_to_association_table.py  aa85d08788bb_created_posts_table.py  b9761b1a2676_create_orders_table.py  d200f3d1d626_created_profile_table.py  eb23032b0f5e_updated_posts_table.py  f19bf2ce05a4_create_products_table.py
api_v1/: __init__.py
api_v1/demo_auth/: views.py
api_v1/products/: crud.py  dependencies.py  schemas.py  views.py
core/: config.py
core/models/: db_helper.py  mixins.py  order.py  order_product_association.py  post.py  product.py  profile.py  user.py
users/: crud.py  schemas.py  views.py
